# NavprayasWeb

./: .editorconfig  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  secret.py
NP/: settings.py  urls.py  wsgi.py
navprayas/: admin.py  apps.py  credentials.json  decorators.py  forms.py  functions.py  models.py  render.py  urls.py  views.py
navprayas/migrations/: 0001_initial.py  0002_auto_20190511_1922.py  0002_auto_20190512_1649.py  0002_auto_20190520_1817.py  0003_auto_20190511_1927.py  0003_auto_20190520_1905.py  0004_auto_20190511_2217.py  0004_auto_20190520_1948.py  0005_auto_20190511_2226.py  0005_auto_20190521_0332.py  0006_auto_20190512_0718.py  0006_auto_20190521_0334.py  0007_auto_20190521_0340.py  0008_auto_20190521_0341.py  0009_auto_20190521_0441.py
navprayas/static/css/: bootstrap.css  main.css
navprayas/static/js/: main.js
navprayas/templates/navprayas/: base.html  base2.html  base3.html  example.html
navprayas/templates/navprayas/doc/: getAdmitCard.html
navprayas/templates/navprayas/exam_forms/: FHS_register.html  MTSE_register.html  PR_register.html  SPR_register.html  chess_register.html  rangotsav_register.html
navprayas/templates/navprayas/home_links/: about.html  events.html  index.html  notifications.html  proceed.html  submitted.html  team.html
navprayas/templates/navprayas/paytm/: pay.html  paytm.html  status.html
navprayas/templates/navprayas/users/: login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signup.html  (+2 more)
