[tool.poetry]
name = "navprayasweb"
version = "0.1.0"
description = "A website for Navprayas"
authors = ["Ambuj Kumar <itsambuja@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django-crispy-forms = "^1.7"
django = "^2.2"
oauth2client = "^4.1"
google-api-python-client = "^1.7"
pycryptodome = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
